--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,54 @@
 <html ng-app='contactListApp'>
 <head>
 	<title>Contact List App</title>
+	
+	<!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+          crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"
+          integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r"
+          crossorigin="anonymous">
+
 	<script src="lib/angular/angular.js"></script>
+	<script src="../node_modules/angular/angular.js"></script>
 	<script src="js/app.js"></script>
 </head>
 <body>
-	<div ng-controller='listCtrl'>
+	<div class="container" ng-controller='listCtrl'>
 		<h1>{{greeting}}</h1>
+
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Number</th>
+					<th>Action</th>
+					<th>&nbsp;</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><input class="form-control" ng-model="contact.name"></td>
+					<td><input class="form-control" ng-model="contact.email"></td>
+					<td><input class="form-control" ng-model="contact.number"></td>
+					<td ng-hide='addFlag'><button class="btn btn-primary" ng-click='addContact()' >Add Contact</button></td>
+					<td><button class="btn btn-info" ng-click='updateContact()'>Update Contact</button>&nbsp;&nbsp;<button class="btn btn-info" ng-click='deselect()'>Clear</button></td>
+				</tr>
+
+				<tr ng-repeat='one in contactList'>
+					<td>{{one.name}}</td>
+					<td>{{one.email}}</td>
+					<td>{{one.number}}</td>
+					<td><button class="btn btn-danger" ng-click="remove(one.name)">Delete</button></td>
+                    <td><button class="btn btn-warning" ng-click="edit(one)">Edit</button></td>
+				</tr>
+			</tbody>
+		</table>
+
 	</div>
 </body>
 </html>
