--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 					<td>{{one.name}}</td>
 					<td>{{one.email}}</td>
 					<td>{{one.number}}</td>
-					<td><button class="btn btn-danger" ng-click="remove(one.name)">Delete</button></td>
+					<td><button class="btn btn-danger" ng-click="remove(one._id)">Delete</button></td>
                     <td><button class="btn btn-warning" ng-click="edit(one)">Edit</button></td>
 				</tr>
 			</tbody>
