--- a/public/index.html
+++ b/public/index.html
@@ -13,43 +13,46 @@
           integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r"
           crossorigin="anonymous">
 
-	<script src="lib/angular/angular.js"></script>
-	<script src="../node_modules/angular/angular.js"></script>
+     <link href="css/display.css" rel="stylesheet">
+
+	<!--<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
+	<!--&lt;!&ndash; <script src="lib/angular/angular.js"></script> &ndash;&gt;-->
+	<!--&lt;!&ndash;<script src="../node_modules/angular/angular.js"></script>&ndash;&gt;-->
+	<!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.js"></script>-->
+	<!--<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>-->
+	<!--<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.3.js"></script>-->
+
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.js"></script>
+	<!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.js"></script>-->
+	<!--<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.3.3.js"></script>-->
+
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc2/js/bootstrap.min.js"></script>
+
 	<script src="js/app.js"></script>
+	<script src="js/controllers.js"></script>
 </head>
-<body>
-	<div class="container" ng-controller='listCtrl'>
-		<h1>{{greeting}}</h1>
+<body ng-controller='appCtrls'>
 
-		<table class="table">
-			<thead>
-				<tr>
-					<th>Name</th>
-					<th>Email</th>
-					<th>Number</th>
-					<th>Action</th>
-					<th>&nbsp;</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td><input class="form-control" ng-model="contact.name"></td>
-					<td><input class="form-control" ng-model="contact.email"></td>
-					<td><input class="form-control" ng-model="contact.number"></td>
-					<td ng-hide='addFlag'><button class="btn btn-primary" ng-click='addContact()' >Add Contact</button></td>
-					<td><button class="btn btn-info" ng-click='updateContact()'>Update Contact</button>&nbsp;&nbsp;<button class="btn btn-info" ng-click='deselect()'>Clear</button></td>
-				</tr>
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+	        <a class="navbar-brand" href="#">Contact List App</a>
+		</div>
+	</nav>
 
-				<tr ng-repeat='one in contactList'>
-					<td>{{one.name}}</td>
-					<td>{{one.email}}</td>
-					<td>{{one.number}}</td>
-					<td><button class="btn btn-danger" ng-click="remove(one._id)">Delete</button></td>
-                    <td><button class="btn btn-warning" ng-click="edit(one)">Edit</button></td>
-				</tr>
-			</tbody>
-		</table>
+	<div ui-view></div>
 
-	</div>
+	<footer class="footer">
+      <div class="container">
+        <p class="text-muted" align="center">Designed and developed by YX &copy 2016</p>
+        <p class="text-muted" align="center">
+        	<a href=""><img src="icons/github-sign.png"></a>&nbsp;&nbsp;&nbsp;
+			<a href=""><img src="icons/linkedin-logo.png"></a>&nbsp;&nbsp;
+			<a href=""><img src="icons/web.png"></a>
+        </p>
+      </div>
+    </footer>
+
 </body>
 </html>
