--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
      <link href="css/display.css" rel="stylesheet">
 
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.js"></script>
-
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-cookies.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc2/js/bootstrap.min.js"></script>
