--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,9 @@
       <div class="container">
         <p class="text-muted" align="center">Designed and developed by YX &copy 2016</p>
         <p class="text-muted" align="center">
-        	<a href="mailto:myletter428@gmail.com" target="_top"><img src="icons/github-sign.png"></a>&nbsp;&nbsp;&nbsp;
-			<a href="mailto:myletter428@gmail.com" target="_top"><img src="icons/linkedin-logo.png"></a>&nbsp;&nbsp;
-			<a href="mailto:myletter428@gmail.com" target="_top"><img src="icons/web.png"></a>
+        	<a href="mailto:" target="_top"><img src="icons/github-sign.png"></a>&nbsp;&nbsp;&nbsp;
+			<a href="mailto:" target="_top"><img src="icons/linkedin-logo.png"></a>&nbsp;&nbsp;
+			<a href="mailto:" target="_top"><img src="icons/web.png"></a>
         </p>
       </div>
     </footer>
